--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;600;700&family=Inter:wght@100;200;300;400;500&display=swap" rel="stylesheet">
-    <title>Document 9</title>
+    <title>Guess the number</title>
 </head>
 <body>
 
